Fix vertical radio/checkbox alignment

--- a/web/less/frontend/_forms.less
+++ b/web/less/frontend/_forms.less
@@ -13,6 +13,14 @@ select:focus:required:invalid {
 	}
 }
 
+input[type="radio"] {
+	margin: 2px 0;
+}
+
+input[type="checkbox"] {
+	margin: 0 0 2px 0;
+}
+
 ul.alert-error {
   margin: 10px;
   margin-left: 0;
